--- a/launch.json
+++ b/launch.json
@@ -1,8 +1,9 @@
-{
-  "run": [
-    {
-      "uri": "./index.js",
-      "method": "run" 
-    }
-  ]
+const path = require('path')
+
+module.exports = {
+
+  async run(req, ondata, kernel) {
+    await kernel.python(path.resolve(__dirname, 'roop/run.py')) 
+  }
+
 }
